# neurips-ir-benchmark-game-scene

./: DATASET.md  LICENSE  README.md  pyproject.toml
ai_command/AICommand/Assets/Editor/: AICommandSettings.cs  AICommandWindow.cs  BatchRunner.cs  OpenAI.cs  (+2 more)
docs/: metrics_extraction.md
reproduction/: README.md  eval_paths.env  expected_summary.md  run_eval_only.sh
scripts/hpc/: build_vllm_v020.sbatch  run_generate_prompts.sbatch  run_no_schema_vllm.sbatch  run_v2_ir_vllm.sbatch  run_v4_ir_vllm.sbatch  submit_all_neurips.sh
scripts/paper/: README.md  build_error_taxonomy.py  build_ir_excerpt.py
src/evaluation/neurips/: m1_funnel.py  m2_v2_structure_score.py  m4_mechanism_adherence.py  parse_generated_scenes.py  pass_at_k.py  run_eval_pipeline.sh  statistical_tests.py  summary_table.py
src/ir_schema/: IR_CHANGELOG.md  IR_ITERATIONS.md  IR_v0.2-runtime-evidence.md  README.md
src/prompts/: coder_no_schema.txt  coder_with_v2_ir.txt  coder_with_v4_ir.txt  generate_prompts.py
src/scene_analysis/: analyze_scripts.py  batch_parse_all.py  build_identity.py  build_links.py  build_script_index.py  extract_inspector.py  generate_runtime_ir_batch.py  parse_generated_scene.py  parse_unity_scene.py  runtime_schema_frequency_v2.py  validate_runtime_ir_batch.py  verify_links.py  verify_parsed_json.py
src/scene_analysis/v2/: build_demand_manifest.py  extract_demanded.py  generate_ir_draft.py  generate_ir_v2.py  generate_review_brief.py  trace_condition_path.py  verify_callbacks.py  verify_cs_only.py
src/scene_analysis/v4/: extract_full_scene.py  generate_ir_v4.py
