[project]
name = "gdd2unity"
version = "0.1.0"
description = "Convert Game Design Documents (GDD) to Unity C# scripts using LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "pypdf>=6.6.2",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "pandas>=3.0.0",
]

[project.scripts]
gdd2unity = "gdd2unity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdd2unity"]

[tool.hatch.build.targets.sdist]
include = ["src/gdd2unity"]

[tool.hatch.build]
sources = ["src"]
